<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.CadastroActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fotocadastroelogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <EditText
        android:id="@+id/nome_usuario"
        style="@style/edit_informacoes_login_cadastro"
        app:layout_constraintBottom_toTopOf="@+id/email_usuario"
        android:hint="@string/informe_seu_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/email_usuario"
        style="@style/edit_informacoes_login_cadastro"
        android:hint="@string/informe_seu_email"

        app:layout_constraintBottom_toTopOf="@+id/senha_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_usuario" />

    <EditText
        android:id="@+id/senha_usuario"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:hint="@string/informe_sua_senha"
        style="@style/edit_informacoes_login_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_usuario" />

    <Button
        android:id="@+id/button_cadastrarUsuario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:background="@drawable/button_solid"
        android:text="@string/cadastrar_se"
        android:textSize="16sp"
        android:textColor="#fff"

        app:layout_constraintVertical_bias="0.26999998" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bangers"
        android:text="@string/ola_seja_bem_vindx_ao_gingado"
        android:textColor="#FAF2F2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/almendra_display"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/esperamos_que_voc_encontre_tudo_o_que_precisa_aqui"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/informe_seu_email"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/email_usuario"
        app:layout_constraintStart_toStartOf="@+id/email_usuario" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/informe_sua_senha"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/senha_usuario"
        app:layout_constraintStart_toStartOf="@+id/senha_usuario" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/informe_seu_nome"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/nome_usuario"
        app:layout_constraintStart_toStartOf="@+id/nome_usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>
